--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<html>
 <head>
 <title>Hello World!</title>
 <link rel="stylesheet" href="bluestyle.css">
@@ -11,6 +10,7 @@
 <p>This is the first file in my new Git Repo.</p>
 <p>This line is here to show how merging works.</p>
 <div><img src="img_hello_git.jpg" alt="Hello Git" style="width:100%;max-width:640px"></div>
+<p>This is git test guys</p>
 
 </body>
 </html>
